--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,9 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "*": ["*"],
-      "app/*": ["app/*"],
-      "components/*": ["components/*"],
-      "assets/*": ["assets/*"]
+      "@/*": ["./src/*"],
     }
   },
   "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
