--- a/package.json
+++ b/package.json
@@ -10,40 +10,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "tamagui": "1.74.8",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-navigation/native": "^6.1.17",
     "@tamagui/font-inter": "1.74.8",
+    "@tamagui/react-native-media-driver": "1.74.8",
     "@tamagui/shorthands": "1.74.8",
     "@tamagui/themes": "1.74.8",
-    "@tamagui/react-native-media-driver": "1.74.8",
-    "expo-font": "~11.10.2",
-    "@react-navigation/native": "^6.1.7",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
-    "@expo/vector-icons": "^14.0.0",
+    "expo": "~50.0.17",
+    "expo-constants": "~15.4.6",
+    "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
-    "expo-router": "^3.4.7",
-    "expo-constants": "~15.4.5",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
-    "react-dom": "18.2.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-web": "~0.19.10",
-    "expo": "~50.0.7",
+    "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.4",
+    "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.1",
+    "react-native-reanimated": "~3.6.3",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.10",
+    "tamagui": "1.74.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "eslint": "^8.50.0",
-    "eslint-config-universe": "^12.0.0",
-    "prettier": "^3.2.5",
+    "@babel/core": "^7.24.4",
     "@tamagui/babel-plugin": "1.74.8",
-    "typescript": "^5.3.3"
+    "@types/react": "~18.2.79",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-universe": "^12.0.1",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.5"
   },
   "eslintConfig": {
     "extends": "universe/native"
