--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@hookform/resolvers": "^3.3.4",
     "@react-navigation/native": "^6.1.17",
     "@tamagui/font-inter": "1.74.8",
     "@tamagui/react-native-media-driver": "1.74.8",
@@ -26,6 +27,7 @@
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.1",
     "react-native-reanimated": "~3.6.3",
@@ -33,7 +35,8 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.10",
-    "tamagui": "1.74.8"
+    "tamagui": "1.74.8",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
